# controle_treinos

./: README.md  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schema.py
