[tool.poetry]
name = "controle-treinos"
version = "0.1.0"
description = ""
authors = ["Gustavo Dias <gust.weing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
